# bastion

./: .coderabbit.yaml  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
.github/ISSUE_TEMPLATE/: default.md
.github/workflows/: issue-validator.yml  pages.yml  pr-merged.yml
docs/: branch-strategy.md  style.md  website.md
docs/prompts/: issue-template.md
modules/bastion-schema/: Cargo.toml  README.md
modules/bastion-schema/examples/: basic_validation.rs  notes.md
modules/bastion-schema/src/: error.rs  lib.rs  schema.rs  types.rs  validate.rs
website/: index.html  input.css  robots.txt  sitemap.xml
