[workspace]
resolver = "2"
members = [
    "modules/bastion-schema",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Carlos Aguilar Miguel <nukiro@yahoo.com>"]
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }